Update doc 06 with review notes

--- a/docs/06_runtime_view.adoc
+++ b/docs/06_runtime_view.adoc
@@ -30,7 +30,9 @@ There are many notations for describing scenarios, e.g.
 
 Por el momento el contenido de este apartado no es muy extenso debido a la pronta etapa rn la que se encuentra em proyecto, a medida que se vaya avanzando este documento se irá actualizando y enriqueciendo.
 
-=== User Sign Up
+=== First level of detail
+
+==== User Sign Up
 Proceso de crear un nuevo usuario
 [plantuml,"Register sequence diagram",png]
 ----
@@ -38,21 +40,21 @@ header Runtime View
 title User Registration
 Actor User
 Participant LoMap
+Participant POD as "User's POD"
 Database DataBase as "DataBase" 
 
-User -> LoMap: Sing up as a new user
+User -> LoMap: Sing up as a new user filling the form
 User <-- LoMap: Ask user for his WebID
-User --> LoMap: Bring his WebID
-LoMap --> LoMap: Verify WebID
-
-...LoMap wait till get POD permissions......
+User -> LoMap: Provide his WebID
+LoMap -> POD: Verify WebID
+LoMap <-- POD: Gives LoMap permissions
 
 LoMap -> DataBase: Add user credentials
 LoMap <-- DataBase: Confirm credentials addition
-User <- LoMap: Show confirm dialog to User
+User <-- LoMap: Show confirm dialog to User
 ----
 
-=== Login and Logout
+==== Login and Logout
 El proceso de login y logout:
 [plantuml,"Log in - log out sequence diagram",png]
 ----
@@ -60,11 +62,14 @@ header Runtime View
 title Log in - Log out
 Actor User
 Participant LoMap
+Participant POD as "User's POD"
 Database DataBase as "DataBase" 
 
 User -> LoMap: Log in with his credentials
 LoMap -> DataBase: Check user credentials
 LoMap <-- DataBase: Confirm credentials
+LoMap -> POD: Check POD availability
+POD --> LoMap: Confirm POD availability
 
 ...User interacts with the apllication......
 
@@ -72,7 +77,7 @@ User -> LoMap: Log out from apllication
 LoMap --> User: Show exit dialog and closes user session
 ----
 
-=== Edit web ID
+==== Edit web ID
 Un usuario quiere cambiar su Web ID:
 
 [plantuml,"Sequence diagram",png]
@@ -81,6 +86,7 @@ header Runtime View
 title WebID change
 Actor User
 Participant LoMap
+Participant POD as "User's POD"
 Database DataBase as "DataBase" 
 
 ...User log in as shown......
@@ -88,19 +94,18 @@ Database DataBase as "DataBase"
 User -> LoMap: Asks for WebID change
 User <-- LoMap: Show edit menu to User
 User -> LoMap: Provide the new WebID
-LoMap --> LoMap: Verify WebID
-
-...LoMap wait till get POD permissions......
+LoMap -> POD: Verify WebID
+LoMap <-- POD: Gives LoMap permissions
 
 LoMap -> DataBase: Update user credentials
 LoMap <-- DataBase: Confirm credentials
 
-LoMap -> User: Show confirm dialog
+LoMap --> User: Show confirm dialog
 
 ...User log out as shown......
 ----
 
-=== Place adding
+==== Place adding
 Proceso de añadir un lugar al mapa:
 [plantuml,"Add favorite place sequence diagram",png]
 ----
@@ -119,7 +124,7 @@ User -> LoMap: Provide the info
 LoMap -> DataBase: Add new user data
 LoMap <-- DataBase: Confirm data addition
 
-LoMap -> User: Show confirm dialog
+LoMap --> User: Show confirm dialog
 
 ...User log out as shown......
 
