--- a/docs/07_deployment_view.adoc
+++ b/docs/07_deployment_view.adoc
@@ -38,10 +38,15 @@ when your infrastructure is more complex.
 
 [role="arc42help"]
 ****
+Describe (usually in a combination of diagrams, tables, and text):
 
+*  the distribution of your system to multiple locations, environments, computers, processors, .. as well as the physical connections between them
+*  important justification or motivation for this deployment structure
+* Quality and/or performance features of the infrastructure
+*  the mapping of software artifacts to elements of the infrastructure
 
- .Motivation
-En el entorno de testing la app se ejecutará en los ordenadores de la universidad y en los ordenadores personales de los desarrolladores de la aplicación. Sin embargo en el entorno de lanzamiento el objetivo es que cualquier ciudadano en bruselas pueda ejecutar la aplicación desde su propio dispositivo.
+For multiple environments or alternative deployments please copy that section of arc42 for all relevant environments.
+****
 
 
 .Motivation
@@ -63,11 +68,3 @@ Nuestra infraestructura estará formada por los siguientes elementos:
 * WebApp: Front-end de nuestra aplicación.
 * RestApi: Back-end de nuestra aplicación.
 * MongoDB: En este punto, base de datos elegida para la aplicación. Con el uso de MongoDB Atlas para su despliegue.
-
-Nuestra infraestructura estará formada por los siguientes elementos:
-PODS: Se utilizarán para guardar datos privados.
-Servidor: Contendrá una base de datos con información de la app.
-WebApp: Mostrará la interfaz al usuario.
-RestApi: Será el encargado de la lógica de negocio.
-
-
