--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -92,5 +92,9 @@ include::11_technical_risks.adoc[]
 include::12_glossary.adoc[]
 
 <<<<
+// Appendix 1. Interface prototypes
+include::appendix_1.adoc[]
+
+<<<<
 // About
 include::about-arc42.adoc[]
