Hotfix and lomap_es2c.yml modification

--- a/docs/appendix_1.adoc
+++ b/docs/appendix_1.adoc
@@ -75,5 +75,5 @@ A table with columns <Library> and <Definition>.
 [options="header",cols="1,2"]
 |===
 |Librería|Explicación
-| moongose | Librería que facilita la integración de una base de datos MongoDB y Node.js
+| mongoose | Librería que facilita la integración de una base de datos MongoDB y Node.js
 |===
