--- a/docs/10_quality_scenarios.adoc
+++ b/docs/10_quality_scenarios.adoc
@@ -69,6 +69,6 @@ Tabular or free form text.
 |Un usuario quiere cambiar la localización de su POD|Privacidad|El usuario tiene que ser libre de ubicar sus datos donde quiera. La aplicación debe permitirle actualizar la referencia a su POD. Esto permite a cada usuario guardar sus datos donde y como quiera.
 |Otro ayuntamiento quiere incorporar la aplicación en su ciudad|Flexibilidad|Nuestra aplicación debe tener una implementación adecuada. Debe usar los patrones y arquitecturas de diseño necesarias para que sea fácil modificar la aplicación para su uso en otra localización
 |Se necesita añadir más funcionalidad|Escalabilidad|La aplicación esta recién creada. La funcionalidad solicitada actual no tiene porque ser la final. Debemos desarrollar un software escalable y preparado para añadir más requisitos.
-|Personas con situaciones especiales (daltónicos, ciegos, etc...) quieren usar la aplicación|Accesibilidad|Debemos de seguir los estándares internacionales de accesibilidad para crear una aplicación que cualquier persona pueda usar. Accesibilidad orientada a las funcionalidades extra (permitir lectura con navegadores de voz, manejo con teclado, etc)
+|Un pico de carga en los servidores de la aplicación|Eficiencia|Es nuestra responsabilidad que nuestra aplicación sea eficiente y no haga los tiempos de espera ofrecidos por Inrupt aún mayores para cuidar la experiencia del usuario. 
 |Personas mayores o malas para la informática quieren usar la aplicación|Usabilidad|La aplicación debe ofrecer una interfaz amigable y sencilla. Tanto la gente mayor como la no habituada a usar aplicaciones deben de poder, si quieren, usarla sin problema. Accesibilidad orientada a la interfaz y sus características.
 |===
