--- a/docs/09_design_decisions.adoc
+++ b/docs/09_design_decisions.adoc
@@ -72,6 +72,15 @@ En la siguiente tabla, ordenadas por prioridad, se encuentran las decisiones arq
 | *Azure*
 | El proveedor de servidores en la nube Azure cuenta con las características necesarias para nuestra aplicación y ya estamos acostumbrados a su uso.
 | La cuenta gratuita tiene un saldo limitado y a largo plazo es insostenible.
-| https://github.com/Arquisoft/lomap_es2c/wiki/00.-Decisiones-arquitect%C3%B3nicas#da-08-redux[DA-08]
+| https://github.com/Arquisoft/lomap_es2c/wiki/00.-Decisiones-arquitect%C3%B3nicas#da-12-entorno-de-despliegue[DA-12]
 
+| *Cloudinary*
+| Es un sistema sencillo de usar y, para el nivel de almacenamiento que requerimos, es gratuito.
+| Si no se realizan bien las peticiones puede ocasionar errores cross-site.
+| https://github.com/Arquisoft/lomap_es2c/wiki/00.-Decisiones-arquitect%C3%B3nicas#da-10-procesamiento-de-im%C3%A1genes-en-la-nube[DA-10]
+
+| *Axios*
+| Cliente HTTP muy sencillo de utilizar.
+| Al nivel de nuestra aplicación no presenta desventajas.
+| https://github.com/Arquisoft/lomap_es2c/wiki/00.-Decisiones-arquitect%C3%B3nicas#da-11-cliente-http-para-realizar-peticiones-desde-la-webapp[DA-11]
 |===
